208-07-23  Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #8987: assigning categories while creating a direct mail does not work correctly

2008-07-18 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #8982: convert linebraks to unix.
	* Feature #8721: Plaintext is compatible to DAM
	* Feature: Test Newsletter's subject will be prepended with additional subject.
	* Fixed bug #9001: added missing form name. (added to all direct_mail forms) 
	* Fixed bug #7384: don't render path, if there's no filelinks
	
2008-07-13 Ivan Kartolo <ivan.kartolo@dkd.de>
	* added UserTS to open default tab
	* manual updates
	* set required PHP to 5.x

2008-07-09 Ivan Kartolo <ivan.kartolo@dkd.de>
	* import setting can be configured by Page TSconfig (see manual)
	* Fixed: bug #8679: wrong SMTP header

2008-06-07 Ivan Kartolo <ivan.kartolo@dkd.de>
	* hide modules, if user not in Live workspace (#8470)

2008-05-05 Ivan Kartolo <ivan.kartolo@dkd.de>
	* remove keyword Public, since it's not supported in PHP 4.x
	* importer is moved to a separated class

2008-04-28 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed: Bug #7243: comma separated list also received HTML Mails
	* Fixed: marker in plain list not changed.
	* Fixed: used styles.content.parseFunc instead of lib.parseFunc, since lib.parseFunc doesn't exist if css content styled is used.
	* Added: mailto link can be configured to use jump url.

2008-04-27 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed Bug #8085: List type "Other Mail Groups" does not send any mail
	* added workaround to bug in Core that links in HTML Mail don'T have any href value. This will be removed if core is fixed.

2008-02-26 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug: importer wrongly read CSV file, which has CR as newline
	* Added: option to select import file charset
	
2008-02-25 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug: non admin user cannot upload file to import.

2008-02-18 Ivan Kartolo <ivan.kartolo@dkd.de>